Выбрал макет LinearLayout для реализации "Калькулятора". Сделана верстка главного экрана калькулятора, без оформления стилей.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView_result"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/text_result"
+        android:gravity="bottom|end"
+        android:textSize="@dimen/result_text" />
 
+    <TextView
+        android:id="@+id/textView_formula"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/text_formula"
+        android:gravity="bottom|end"
+        android:textSize="@dimen/formula_text" />
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/activity_digital_keyboard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
