--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/text_result"
-        android:gravity="bottom|end"
+        android:gravity="center_vertical|end"
         android:textSize="@dimen/result_text" />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/text_formula"
-        android:gravity="bottom|end"
+        android:gravity="center_vertical|end"
         android:textSize="@dimen/formula_text" />
 
     <include
