--- a/app/src/main/res/layout/activity_digital_keyboard.xml
+++ b/app/src/main/res/layout/activity_digital_keyboard.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/AppStyleButton">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_C"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/orange" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_backspace"
@@ -24,15 +25,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_backspace"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/orange" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_plus_minus"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_plus_minus"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/indigo"
+            android:text="@string/_plus_minus" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_divide"
@@ -40,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_divide"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/indigo" />
     </LinearLayout>
 
     <LinearLayout
@@ -53,24 +54,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_7"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_7" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_8"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_8" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_9"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_9"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_9" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_multiply"
@@ -78,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_multiply"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/indigo" />
     </LinearLayout>
 
     <LinearLayout
@@ -91,24 +89,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_4"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_4" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_5"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_5" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_6"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_6" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_minus"
@@ -116,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_minus"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/indigo" />
     </LinearLayout>
 
     <LinearLayout
@@ -129,24 +124,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_1"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_1" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_2"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_2" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_3"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_3" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_plus"
@@ -154,7 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_plus"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/indigo"/>
 
     </LinearLayout>
 
@@ -168,16 +160,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="@string/_0"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_0" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_decimalSeparator"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_decimalSeparator"
-            android:textSize="@dimen/button_text" />
+            android:text="@string/_decimalSeparator" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_equal"
@@ -185,7 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_equal"
-            android:textSize="@dimen/button_text" />
+            android:backgroundTint="@color/purple_500"/>
     </LinearLayout>
 
 
