--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,39 @@
         <item name="android:shadowDx">@dimen/shadow</item>
         <item name="android:shadowDy">@dimen/shadow</item>
     </style>
+
+    <style name="StyleButtonDark">
+        <item name="android:layout_width">@dimen/layout_width</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">@dimen/layout_weight</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/light_slate_gray</item>
+        <item name="android:insetLeft">@dimen/inset</item>
+        <item name="android:insetRight">@dimen/inset</item>
+        <item name="android:insetTop">@dimen/inset</item>
+        <item name="android:insetBottom">@dimen/inset</item>
+        <item name="android:shadowColor">@color/black</item>
+        <item name="android:shadowRadius">@dimen/button_text_shadow</item>
+        <item name="android:shadowDx">@dimen/shadow</item>
+        <item name="android:shadowDy">@dimen/shadow</item>
+    </style>
+
+    <style name="StyleButtonForSettingsAct">
+        <item name="android:insetLeft">@dimen/inset_frame</item>
+        <item name="android:insetRight">@dimen/inset_frame</item>
+    </style>
+
+    <style name="MyLightTheme" parent="Theme.GB_Android_Base_SimpleCalculator">
+        <item name="colorAccent">@color/purple_500</item>
+    </style>
+
+    <style name="MyDarkTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/grey_dark</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="android:windowBackground">@color/grey</item>
+        <item name="android:backgroundTint">@color/silver</item>
+        <item name="colorAccent">@color/grey_dark</item>
+    </style>
+
 </resources>
