--- a/app/src/main/res/layout-land/activity_settings_dark.xml
+++ b/app/src/main/res/layout-land/activity_settings_dark.xml
@@ -17,22 +17,26 @@
 
     <RadioGroup
         android:id="@+id/radios"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/inset_frame">
         <RadioButton
             android:id="@+id/radioButton_light"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/light_theme"
             android:textSize="@dimen/button_text_size_small"
             android:layout_marginTop="@dimen/margin_top" />
 
         <RadioButton
             android:id="@+id/radioButton_dark"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/dark_theme"
             android:textSize="@dimen/button_text_size_small"
             android:layout_marginTop="@dimen/margin_top" />
@@ -51,7 +55,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/ok"
-            style="@style/StyleButtonForSettingsAct"/>
+            style="@style/StyleButtonForSettingsAct"
+            android:backgroundTint="@color/grey_dark"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_cancel"
@@ -59,7 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/cancel"
-            style="@style/StyleButtonForSettingsAct"/>
+            style="@style/StyleButtonForSettingsAct"
+            android:backgroundTint="@color/grey_dark"/>
     </LinearLayout>
 
 
