--- a/app/src/main/res/layout/activity_settings_dark.xml
+++ b/app/src/main/res/layout/activity_settings_dark.xml
@@ -51,7 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/ok"
-            style="@style/StyleButtonForSettingsAct"/>
+            style="@style/StyleButtonForSettingsAct"
+            android:backgroundTint="@color/grey_dark"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_cancel"
@@ -59,7 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/cancel"
-            style="@style/StyleButtonForSettingsAct"/>
+            style="@style/StyleButtonForSettingsAct"
+            android:backgroundTint="@color/grey_dark"/>
     </LinearLayout>
 
 
